# AgroEcoSim

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: scenarios.json  scenarios.yaml
data/demo/: README.md  agroecosystem_timeseries.csv
docs/: index.html  script.js  styles.css
notebooks/: 01_indicator_pipeline.ipynb  02_foodweb_glv_simulation.ipynb  03_psr_stability_assessment.ipynb  04_scenario_decision_matrix.ipynb  05_uncertainty_and_assimilation.ipynb  README.md
results/figures/: README.md
results/tables/: indicator_scores.csv  scenario_summary.csv  stability_indicators.csv
results/trajectories/: bat_assisted_control.csv  bee_assisted_pollination.csv  chemical_withdrawal.csv  conventional_baseline.csv  integrated_biocontrol.csv  organic_transition.csv
scripts/: generate_demo_data.py  generate_figures.py  run_pipeline.py  run_scenarios.py
src/agroecosim/: __init__.py  cli.py  config.py  pipeline.py
src/agroecosim/assimilation/: __init__.py  ensemble.py
src/agroecosim/data/: __init__.py  demo.py  pipeline.py
src/agroecosim/inference/: __init__.py  bayesian_glv.py
src/agroecosim/metrics/: __init__.py  stability.py
src/agroecosim/models/: __init__.py  crop_growth.py  glv_foodweb.py  psr_evaluation.py  scenario_simulation.py
src/agroecosim/visualization/: __init__.py  figures.py
tests/: __init__.py  test_data_pipeline.py  test_metrics.py  test_models.py  test_pipeline.py
workflows/: Snakefile
