[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agroecosim"
version = "0.1.0"
description = "Research portfolio for organic agriculture ecosystem modeling and decision analysis."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]
