[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agroecosim"
version = "0.1.0"
description = "Modular research prototype for organic agriculture ecosystem modeling and decision analysis."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
]

[project.optional-dependencies]
scientific = [
  "scipy>=1.12",
  "matplotlib>=3.8",
  "seaborn>=0.13",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
agroecosim = "agroecosim.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
